Added comments for count vec

--- a/notebook_templates/task3_xxxxxxx.ipynb
+++ b/notebook_templates/task3_xxxxxxx.ipynb
@@ -10505,14 +10505,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "# Read the countvec_test.txt file\n",
-        "with open('countvec_test.txt', 'r') as file:\n",
-        "    countvec_test_data = file.readlines()"
+        "### Count Vectoriser "
       ]
     },
     {
@@ -10556,6 +10552,7 @@
         }
       ],
       "source": [
+        "# Reinitialise aggregated dataframe \n",
         "aggregated_review_df = review_df.groupby('gmap_id').agg(\n",
         "    review_count=('gmap_id', 'size'),\n",
         "    user_count = ('user_id', 'size'),\n",
@@ -10567,25 +10564,14 @@
         "\n",
         ")\n",
         "\n",
-        "# Convert the read lines into a DataFrame\n",
-        "countvec_test_df = pd.DataFrame([line.strip().split() for line in countvec_test_data])\n",
-        "countvec_test_df.rename(columns ={0: 'gmap_id'}, inplace=True)\n",
+        "# Read the countvec_test.txt file\n",
+        "with open('countvec_test.txt', 'r') as file:\n",
+        "    count_vec_data = file.readlines()\n",
+        "# Convert to Dataframe \n",
+        "count_vec_df = pd.DataFrame([line.strip().split() for line in count_vec_data])\n",
+        "count_vec_df.rename(columns ={0: 'gmap_id'}, inplace=True)\n",
         "\n",
-        "# Read the test_vocab.txt file\n",
-        "test_vocab_df = pd.read_csv('test_vocab.txt', delimiter=':', header=None, names=['word', 'index'])\n",
-        "\n",
-        "# Display the first few rows of each DataFrame to verify\n",
-        "print(countvec_test_df.head())\n",
-        "print(test_vocab_df.head())\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "aggregated_review_df.to_csv('temp2.csv')"
+        "print(count_vec_df.head())\n"
       ]
     },
     {
@@ -10801,138 +10787,9 @@
         }
       ],
       "source": [
-        "combined_vec_df = pd.merge(countvec_test_df, aggregated_review_df, on='gmap_id', how='left')\n",
+        "# Merge Dataframes\n",
+        "combined_vec_df = pd.merge(count_vec_df, aggregated_review_df, on='gmap_id', how='left')\n",
         "combined_vec_df.head()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([4.1484375 , 4.7106599 , 4.61502347, 4.6       , 3.30184332,\n",
-              "       4.94329897, 4.74358974, 4.2244898 , 4.70895522, 4.32635983,\n",
-              "       4.37219451, 4.92261905, 4.9754902 , 4.10594796, 3.90510949,\n",
-              "       4.51282051, 4.46548323, 4.65306122, 4.17112299, 4.46385542,\n",
-              "       3.9137931 , 4.05347594, 4.68518519, 4.12765957, 3.88888889,\n",
-              "       4.45138889, 3.85619469, 4.01690821, 3.69507576, 4.89490446,\n",
-              "       4.83561644, 3.71186441, 4.49693252, 4.96575342, 4.41333333,\n",
-              "       3.67391304, 4.30769231, 3.48550725, 4.50340136, 4.69767442,\n",
-              "       4.67346939, 4.57821229, 4.21138211, 4.21212121, 4.47115385,\n",
-              "       4.60475483, 4.68181818, 4.70448549, 3.16      , 4.90510949,\n",
-              "       4.45364238, 4.4962963 , 4.72      , 4.76767677, 4.8313253 ,\n",
-              "       4.30587484, 4.4453125 , 4.84090909, 4.40647482, 4.        ,\n",
-              "       3.43010753, 4.29333333, 4.53370787, 4.64251208, 4.55263158,\n",
-              "       4.31884058, 4.85795455, 4.67045455, 4.03864734, 4.50892857,\n",
-              "       3.796875  , 4.56034483, 4.10204082, 4.14102564, 4.8984375 ,\n",
-              "       3.48598131, 4.3900325 , 4.49275362, 3.14746544, 4.76744186,\n",
-              "       4.08163265, 4.68817204, 3.97340426, 4.40191388, 4.53378378,\n",
-              "       4.18939394, 4.67816092, 4.23913043, 4.69340233, 4.54081633,\n",
-              "       4.37179487, 4.97435897, 4.21052632, 4.49553571, 4.95833333,\n",
-              "       4.7826087 , 3.625     , 4.796875  , 3.72997033, 4.7961165 ,\n",
-              "       3.75789474, 3.55855856, 4.39459459, 4.50561798, 4.75595238,\n",
-              "       4.38655462, 4.64220183, 4.57407407, 4.04651163, 4.09782609,\n",
-              "       5.        , 2.75      , 4.21969697, 4.49144254, 4.84693878,\n",
-              "       4.53404255, 4.38372093, 4.25974026, 4.16521739, 3.55882353,\n",
-              "       4.61818182, 4.08219178, 4.57692308, 4.4940678 ])"
-            ]
-          },
-          "execution_count": 392,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "combined_vec_df['avg_rating'].unique()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "TypeError",
-          "evalue": "'list' object is not callable",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[393], line 43\u001b[0m\n\u001b[0;32m     40\u001b[0m                             \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# Step 4: Convert dictionaries to DataFrames\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m df_above_4 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mword_count_above_4\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m, columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mword\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcount\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     44\u001b[0m df_below_4 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[38;5;28mlist\u001b[39m(word_count_below_4\u001b[38;5;241m.\u001b[39mitems()), columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mword\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcount\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     46\u001b[0m \u001b[38;5;66;03m# Step 5: Sort to get top 10 for each group\u001b[39;00m\n",
-            "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "\n",
-        "# Assume 'combined_vec_df' is your DataFrame containing word indices\n",
-        "\n",
-        "# Step 1: Create a dictionary from the text document\n",
-        "word_dict = {}\n",
-        "with open('test_vocab.txt', 'r') as file:\n",
-        "    for line in file:\n",
-        "        word, index = line.strip().split(':')\n",
-        "        word_dict[index] = word\n",
-        "\n",
-        "# Step 2: Initialize dictionaries to hold word counts for ratings above and below 4\n",
-        "word_count_above_4 = defaultdict(int)\n",
-        "word_count_below_4 = defaultdict(int)\n",
-        "\n",
-        "# Step 3: Iterate through each row in the DataFrame and replace indices with words\n",
-        "for _, row in combined_vec_df.iterrows():\n",
-        "    if pd.notna(row['avg_rating']):\n",
-        "        # Determine which dictionary to use based on the rating\n",
-        "        if row['avg_rating'] >= 4:\n",
-        "            target_dict = word_count_above_4\n",
-        "        else:\n",
-        "            target_dict = word_count_below_4\n",
-        "        \n",
-        "        # Iterate over each relevant column to extract word counts\n",
-        "        for col in combined_vec_df.columns[1:]:\n",
-        "            # Convert the value to a string and check if it's valid\n",
-        "            value = str(row[col])\n",
-        "            if value != 'None' and value.strip():\n",
-        "                word_counts = value.split(',')\n",
-        "                for wc in word_counts:\n",
-        "                    # Check if the string is in the correct format (exactly one colon)\n",
-        "                    parts = wc.split(':')\n",
-        "                    if len(parts) == 2:\n",
-        "                        index, count = parts\n",
-        "                        try:\n",
-        "                            # Use the dictionary to replace index with word\n",
-        "                            word = word_dict.get(index, f\"unknown_{index}\")\n",
-        "                            target_dict[word] += int(count)\n",
-        "                        except ValueError:\n",
-        "                            # Skip if count is not a valid integer\n",
-        "                            continue\n",
-        "\n",
-        "# Step 4: Convert dictionaries to DataFrames\n",
-        "df_above_4 = pd.DataFrame(list(word_count_above_4.items()), columns=['word', 'count'])\n",
-        "df_below_4 = pd.DataFrame(list(word_count_below_4.items()), columns=['word', 'count'])\n",
-        "\n",
-        "# Step 5: Sort to get top 10 for each group\n",
-        "df_above_4 = df_above_4.sort_values(by='count', ascending=False).head(10)\n",
-        "df_below_4 = df_below_4.sort_values(by='count', ascending=False).head(10)\n",
-        "\n",
-        "# Plotting for words with average rating above 4\n",
-        "plt.figure(figsize=(14, 6))\n",
-        "sns.barplot(data=df_above_4, x='count', y='word', palette='viridis')\n",
-        "plt.title('Top 10 Most Common Words with Avg Rating >= 4', fontsize=16)\n",
-        "plt.xlabel('Word Count', fontsize=14)\n",
-        "plt.ylabel('Word', fontsize=14)\n",
-        "plt.show()\n",
-        "\n",
-        "# Plotting for words with average rating below 4\n",
-        "plt.figure(figsize=(14, 6))\n",
-        "sns.barplot(data=df_below_4, x='count', y='word', palette='magma')\n",
-        "plt.title('Top 10 Most Common Words with Avg Rating < 4', fontsize=16)\n",
-        "plt.xlabel('Word Count', fontsize=14)\n",
-        "plt.ylabel('Word', fontsize=14)\n",
-        "plt.show()\n"
       ]
     },
     {
@@ -10984,62 +10841,57 @@
         }
       ],
       "source": [
-        "\n",
-        "# Assume 'combined_vec_df' is your DataFrame containing word indices\n",
-        "\n",
-        "# Step 1: Create a dictionary from the text document\n",
+        "# Convert vocab list to dictionary \n",
         "word_dict = {}\n",
         "with open('test_vocab.txt', 'r') as file:\n",
         "    for line in file:\n",
         "        word, index = line.strip().split(':')\n",
         "        word_dict[index] = word\n",
         "\n",
-        "# Step 2: Initialize dictionaries to hold word counts and rating sums\n",
+        "# Initialise dictionaries for word counts and ratings \n",
         "word_count = defaultdict(int)\n",
         "word_rating_sum = defaultdict(float)\n",
         "\n",
-        "# Step 3: Iterate through each row in the DataFrame to accumulate counts and ratings\n",
-        "for _, row in combined_vec_df.iterrows():\n",
+        "# Iterate through each row in the DataFrame\n",
+        "for column, row in combined_vec_df.iterrows():\n",
         "    if pd.notna(row['avg_rating']):\n",
         "        avg_rating = row['avg_rating']\n",
         "        \n",
-        "        # Iterate over each relevant column to extract word counts\n",
+        "        # Process each word count column\n",
         "        for col in combined_vec_df.columns[1:]:\n",
-        "            # Convert the value to a string and check if it's valid\n",
         "            value = str(row[col])\n",
-        "            if value != 'None' and value.strip():\n",
-        "                word_counts = value.split(',')\n",
-        "                for wc in word_counts:\n",
-        "                    # Check if the string is in the correct format (exactly one colon)\n",
-        "                    parts = wc.split(':')\n",
-        "                    if len(parts) == 2:\n",
-        "                        index, count = parts\n",
-        "                        try:\n",
-        "                            # Use the dictionary to replace index with word\n",
-        "                            word = word_dict.get(index, f\"unknown_{index}\")\n",
-        "                            count = int(count)\n",
-        "                            word_count[word] += count\n",
-        "                            word_rating_sum[word] += avg_rating * count\n",
-        "                        except ValueError:\n",
-        "                            # Skip if count is not a valid integer\n",
-        "                            continue\n",
+        "            if value and value != 'None':\n",
+        "                for wc in value.split(','):\n",
+        "                    # Ensure the word count entry is valid\n",
+        "                    if ':' in wc:\n",
+        "                        index, count = wc.split(':')\n",
+        "                        if count.isdigit():\n",
+        "                            word = word_dict.get(index, f\"unknown_{index}\") # not sure if we need unknown \n",
+        "                            word_count[word] += int(count)\n",
+        "                            word_rating_sum[word] += avg_rating * int(count)\n",
         "\n",
-        "# Step 4: Calculate the average rating per word\n",
-        "word_avg_rating = {word: word_rating_sum[word] / word_count[word] for word in word_count}\n",
+        "# Calculate average ratings for each words\n",
+        "word_avg_rating = {\n",
+        "    word: word_rating_sum[word] / word_count[word]\n",
+        "    for word in word_count\n",
+        "}\n",
         "\n",
-        "# Convert to DataFrame\n",
-        "df_word_ratings = pd.DataFrame(list(word_avg_rating.items()), columns=['word', 'average_rating'])\n",
+        "# Convert the results into a DataFrame\n",
+        "df_word_ratings = pd.DataFrame(\n",
+        "    list(word_avg_rating.items()), columns=['word', 'average_rating']\n",
+        ")\n",
         "df_word_ratings['count'] = df_word_ratings['word'].map(word_count)\n",
         "\n",
-        "# Filter to include only words that appear more than twice\n",
+        "# Filter for words that appear more than twice\n",
         "df_word_ratings = df_word_ratings[df_word_ratings['count'] > 2]\n",
         "\n",
-        "# Step 5: Sort to get top 20 positive and negative impactful words\n",
+        "# Get the top 20 words with the highest and lowest average ratings\n",
         "top_positive_words = df_word_ratings.sort_values(by='average_rating', ascending=False).head(20)\n",
         "top_negative_words = df_word_ratings.sort_values(by='average_rating', ascending=True).head(20)\n",
         "\n",
-        "# Plotting for most positively impactful words\n",
-        "plt.figure(figsize=(14, 8))\n",
+        "\n",
+        "# Plotting for positive words\n",
+        "plt.figure(figsize=(12, 8))\n",
         "sns.barplot(data=top_positive_words, x='word', y='average_rating', palette='viridis')\n",
         "plt.title('Top 20 Most Positively Impactful Words', fontsize=16)\n",
         "plt.xlabel('Word', fontsize=14)\n",
@@ -11048,8 +10900,8 @@
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
-        "# Plotting for most negatively impactful words\n",
-        "plt.figure(figsize=(14, 8))\n",
+        "# Plotting for negative words\n",
+        "plt.figure(figsize=(12, 8))\n",
         "sns.barplot(data=top_negative_words, x='word', y='average_rating', palette='magma')\n",
         "plt.title('Top 20 Most Negatively Impactful Words', fontsize=16)\n",
         "plt.xlabel('Word', fontsize=14)\n",
