--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -72,7 +72,7 @@
     "id": "ewZrff73lDEV"
    },
    "source": [
-    "This assessment concerns textual data and the aim is to extract data, process them, and transform them into a proper format. The dataset provided is in the format of a PDF file containing ...."
+    "This script tokenizes the review text extracted from task1 and generates two output files: a vocabulary dictionary of the tokens in a text format and a count vector text file that lists the token indices and their frequencies for each gmap_id."
    ]
   },
   {
@@ -245,11 +245,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "id": "ENnHWjoXlDEc"
@@ -376,15 +371,13 @@
     "1. Read the stopwords txt and append them to a list called stopwords_lis\n",
     "2. Iterate through the rows of df_reviews\n",
     "3. Task a finished: Tokenize the review_text of each row by RegexpTokenizer\n",
-    "Justification: To perform further processing like remove stop words, Stemmentization etc, Words need to be tokenized first.\n",
+    "- **Justification**: To perform further processing like remove stop words, Stemmentization etc, Words need to be tokenized first.\n",
     "4. Task e finished: Used list comprehension to  filter out the tokens to be length longer than3\n",
-    "Justification: Words's Lenth less than 3 are always meanningless words. Remove than at the beginning can help improve efficency of data processing.\n",
+    "- **Justification**: Words's Lenth less than 3 are always meanningless words. Remove than at the beginning can help improve efficency of data processing.\n",
     "5. Task b1 finishied: Used list comprehension to filter the unigram_tokens by word not in the stop_word list.\n",
-    "Justification: Stop words are considered noise that needs to be removed. Remove them before stemmatization, because if the stopwords are stemmed first, the words would be transformed that not being able to match the stopword list.\n",
+    "- **Justification**: Stop words are considered noise that needs to be removed. Remove them before stemmatization, because if the stopwords are stemmed first, the words would be transformed that not being able to match the stopword list.\n",
     "6. Stemming the remaining tokens to their root forms using the Porter Stemmer.\n",
-    "Justification: To identify context dependent stopwords, words need to be stemmed before removing them\n",
-    "\n",
-    "Explanation on result:"
+    "- **Justification**: To identify context dependent stopwords, words need to be stemmed before removing them"
    ]
   },
   {
@@ -423,9 +416,7 @@
    "metadata": {},
    "source": [
     "1.Identifying and removing context-dependent stopwords, which are words that appear in more than 95% of businesses.\n",
-    "Justification: For example: \"The words \"restaurant\" and \"restaurants\" are treated separately. \"Restaurant\" might appear in 80% of reviews, and \"restaurants\" in 20%. Individually, neither might exceed a frequency threshold (like 95%). Thus, neither is removed as a context-dependent stopword.\n",
-    "\n",
-    "Explanation on result:"
+    "- **Justification**: For example: \"The words \"restaurant\" and \"restaurants\" are treated separately. \"Restaurant\" might appear in 80% of reviews, and \"restaurants\" in 20%. Individually, neither might exceed a frequency threshold (like 95%). Thus, neither is removed as a context-dependent stopword."
    ]
   },
   {
@@ -462,7 +453,7 @@
    "metadata": {},
    "source": [
     "1. The purpose of this code is to remove rare words from the tokenized reviews. Rare words are defined as those that appear in less than 5% of the businesses in the dataset.\n",
-    "Justification: This step should be done after stemmatization. For example,\"running,\" \"ran,\" and \"runs\" all stem to \"run.\" If rare word removal were done before stemming, each form would be treated as a separate entity, potentially missing the fact that collectively they might not be rare."
+    "- **Justification**: This step should be done after stemmatization. For example,\"running,\" \"ran,\" and \"runs\" all stem to \"run.\" If rare word removal were done before stemming, each form would be treated as a separate entity, potentially missing the fact that collectively they might not be rare."
    ]
   },
   {
@@ -498,7 +489,7 @@
    "source": [
     "1. Used MWETokenizer with pmi to find the first 200 bigrams and iterate through each row to identify the bigram and add bigram to it.\n",
     "\n",
-    "Justification: The Pointwise Mutual Information (PMI) measure used to identify meaningful bigrams relies on the frequency and co-occurrence of words within a text. By removing unimportant or noisy words first, the PMI calculation becomes more accurate and reflective of meaningful word associations. If bigrams were generated earlier, PMI scores could be skewed by the presence of irrelevant or overly common tokens, leading to less meaningful bigrams."
+    "- **Justification**: The Pointwise Mutual Information (PMI) measure used to identify meaningful bigrams relies on the frequency and co-occurrence of words within a text. By removing unimportant or noisy words first, the PMI calculation becomes more accurate and reflective of meaningful word associations. If bigrams were generated earlier, PMI scores could be skewed by the presence of irrelevant or overly common tokens, leading to less meaningful bigrams."
    ]
   },
   {
@@ -608,7 +599,7 @@
     "id": "7cbSKT6PlDEg"
    },
    "source": [
-    "1. The code above processes a collection of text documents to create a numerical representation suitable for text analysis. It uses CountVectorizer to tokenize the documents and generate a document-term matrix, capturing the frequency of each word in each document. The vocabulary of unique words is extracted and written to a file, mapping each word to an index. Additionally, the code generates formatted output for each document, listing the frequency of each word by its index."
+    "The code above processes a collection of text documents to create a numerical representation suitable for text analysis. It uses CountVectorizer to tokenize the documents and generate a document-term matrix, capturing the frequency of each word in each document. The vocabulary of unique words is extracted and written to a file, mapping each word to an index. Additionally, the code generates formatted output for each document, listing the frequency of each word by its index."
    ]
   },
   {
@@ -747,7 +738,7 @@
     "id": "RXAprlSblDEn"
    },
    "source": [
-    "....."
+    "The provided code successfully accomplishes the objectives of generating vocab.txt and countvect.txt files by systematically filtering the review text and applying a series of well-structured text preprocessing steps. By following a logical sequence—starting with tokenization, then removing context-independent and context-dependent stopwords, followed by stemming, and finally removing rare words—the code effectively refines the dataset to focus on the most informative and meaningful tokens. This step-by-step approach ensures that the resulting vocabulary is both clean and relevant, enhancing the quality of the data for subsequent analysis or modeling tasks. The target of creating a concise and optimized vocabulary, as well as a corresponding count vector, is achieved efficiently and effectively through this methodical preprocessing pipeline."
    ]
   },
   {
