test and change the name

--- a/notebook_templates/task2_xxxxxxx.ipynb
+++ b/notebook_templates/task2_xxxxxxx.ipynb
@@ -8,14 +8,14 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "\n",
-    "# FIT5196 Task 2 in Assessment 1\n",
-    "    \n",
-    "#### Student Name: xxxxxxx\n",
-    "#### Student ID: xxxxxxxxx\n",
+    "# FIT5196 Task 1 in Assessment 1\n",
+    "#### Student Name: Michael Xie, Weiliang Huang\n",
+    "#### Student ID: 31482919, 34370862\n",
     "\n",
-    "Date: xxxxxxxx\n",
+    "Date: 8/24/2024\n",
     "\n",
-    "Environment: xxxxxx\n",
+    "\n",
+    "Environment: Python 3.11.9\n",
     "\n",
     "Libraries used:\n",
     "* os (for interacting with the operating system, included in Python xxxx) \n",
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(\"task1_30.json\")\n",
+    "df = pd.read_json(\"task1_030.json\")\n",
     "df = df.T.reset_index() # Transpose the DataFrame and reset the index to convert JSON keys to columns\n",
     "df.columns = ['gmap_id', 'reviews', 'earliest', 'latest'] # Rename columns for clarity\n",
     "print(df.head(20))\n",
@@ -663,7 +663,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"test_vocab.txt\",'w') as file:\n",
+    "with open(\"030_vocab.txt\",'w') as file:\n",
     "    for index,word in enumerate(vocab_dist):\n",
     "        file.write(f\"{word}:{ index}\\n\")"
    ]
@@ -696,7 +696,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"countvec_test.txt\",\"w\") as file:\n",
+    "with open(\"030_countvec.txt\",\"w\") as file:\n",
     "    for line in output_countvec:\n",
     "        file.write(line + \"\\n\")"
    ]
