--- a/notebook_templates/task3_xxxxxxx.ipynb
+++ b/notebook_templates/task3_xxxxxxx.ipynb
@@ -9,8 +9,8 @@
         "<div class=\"alert alert-block alert-success\">\n",
         "    \n",
         "# FIT5196 Task 3 in Assessment 1\n",
-        "#### Student Name: Michael Xie\n",
-        "#### Student ID: 31842819\n",
+        "#### Student Name: Michael Xie，Weiliang Huang\n",
+        "#### Student ID: 31842819, 34370862\n",
         "\n",
         "Date: 24/08/2024\n",
         "\n",
