Small update to powerpoint

--- a/notebook_templates/task3_030.ipynb
+++ b/notebook_templates/task3_030.ipynb
@@ -18,8 +18,14 @@
         "Environment: Python 3.11.9\n",
         "\n",
         "Libraries used:\n",
-        "* xxxxx\n",
-        "* xxxxx\n",
+        "* **re:** to define and use regular expressions\n",
+        "* **pandas:** to manipulate and transform data\n",
+        "* **numpy:** to initialise Null values \n",
+        "* **seaborn:** to generate graphs and other visualisations\n",
+        "* **matplotlib.pyplot:** also used to generate visualisations \n",
+        "* **folium:** used to generate map \n",
+        "* **branca.colormap, linear:** used to generate continious colour scheme \n",
+        "* **collections:, defaultdict** to intialise default dictionaries\n",
         "    \n",
         "</div>"
       ]
