added more comments task3

--- a/notebook_templates/task3_030.ipynb
+++ b/notebook_templates/task3_030.ipynb
@@ -47,9 +47,11 @@
         "[3. Examining Raw Data(given input file from task1)](#examine1) <br>\n",
         "[4. Examining metadata](#examine2) <br>\n",
         "[5. Data Analysis](#DA) <br>\n",
-        "    - [5.1 Question 1: How is xxxx related to xxxx?](#DI1) <br>\n",
-        "    - [5.2 Question 2: How does xxxxxx impact the rating of a business?](#DI2) <br>\n",
-        "[6. Summary](#summary) <br>\n",
+        "    - [5.1 Which MISC tags are most desirable?](#DI1) <br>\n",
+        "    - [5.2 How does location impact business success?](#DI2) <br>\n",
+        "    - [5.3 How does price affect business rating?](#DI3) <br>\n",
+        "    - [5.4 What are the highest performing business categories?](#DI4) <br>\n",
+        "    - [5.5 Review Text Analysis](#DI5) <br>\n",
         "[7. References](#Ref) <br>"
       ]
     },
@@ -2421,7 +2423,7 @@
         "plt.ylabel('Average Review Rating', fontsize=14)\n",
         "plt.yticks(fontsize=10)\n",
         "# Add labels on bars\n",
-        "for i, bar in enumerate(ax.patches):\n",
+        "for i, bar in enumerate(ax.patches): # [1]\n",
         "    x_pos = bar.get_x() + bar.get_width() / 2\n",
         "    y_pos = bar.get_height()/2\n",
         "    reviews = top_10.iloc[i]['reviews']\n",
@@ -2451,7 +2453,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Location"
+        "## How does location impact business success?"
       ]
     },
     {
@@ -6301,7 +6303,7 @@
         "business_map = folium.Map(location=map_center, zoom_start=6.5, tiles='cartodbpositron')\n",
         "\n",
         "# Generate a continuous colour scale \n",
-        "colormap = linear.YlGnBu_09.scale(aggregated_df['average_rating'].min(), aggregated_df['average_rating'].max())\n",
+        "colormap = linear.YlGnBu_09.scale(aggregated_df['average_rating'].min(), aggregated_df['average_rating'].max()) # [2]\n",
         "\n",
         "# Plot points \n",
         "for column, row in aggregated_df.iterrows(): \n",
@@ -10326,7 +10328,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Category "
+        "## What are the highest performing business categories?"
       ]
     },
     {
@@ -10500,7 +10502,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Count Vectoriser "
+        "## Review Text Analysis"
       ]
     },
     {
@@ -10912,6 +10914,19 @@
         "## 7. References <a class=\"anchor\" name=\"Ref\"></a>\n",
         "\n",
         "</div>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "\n",
+        "[1] Adding Value labels on a Matplotlib Bar Chart, https://www.geeksforgeeks.org/adding-value-labels-on-a-matplotlib-bar-chart/, Accessed 26/8/2024\n",
+        "\n",
+        "[2] Using colormaps https://python-visualization.github.io/folium/latest/advanced_guide/colormaps.html, Accessed 28/8/2024 \n",
+        "\n",
+        "\n"
       ]
     }
   ],
