--- a/notebook_templates/task2_030.ipynb
+++ b/notebook_templates/task2_030.ipynb
@@ -94,11 +94,14 @@
    "source": [
     "In this assessment, any python packages is permitted to be used. The following packages were used to accomplish the related tasks:\n",
     "\n",
-    "* **os:** to interact with the operating system, e.g. navigate through folders to read files\n",
-    "* **re:** to define and use regular expressions\n",
-    "* **pandas:** to work with dataframes\n",
-    "* **multiprocessing:** to perform processes on multi cores for fast performance \n",
-    "* ..."
+    "Libraries used:\n",
+    "* os (for interacting with the operating system, included in Python xxxx) \n",
+    "* pandas 1.1.0 (for dataframe, installed and imported) \n",
+    "* multiprocessing (for performing processes on multi cores, included in Python 3.6.9 package) \n",
+    "* itertools (for performing operations on iterables)\n",
+    "* nltk 3.5 (Natural Language Toolkit, installed and imported)\n",
+    "* nltk.tokenize (for tokenization, installed and imported)\n",
+    "* nltk.stem (for stemming the tokens, installed and imported)"
    ]
   },
   {
@@ -240,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Justification: After reading the json file into a pandas dataframe. I found that the column and rows need to be transposed. Hence I used .T to ahieve that. Only the review contains more than 70 texts review is needed. So I used a list comprehension first to drop the review that is \"None\"."
+    "Justification: After reading the json file into a pandas dataframe. It was apparent that column and rows need to be transposed. Hence .T was used to achieve this. Only the businesses containing more than 70 texts review is needed. List comprehension is used to first drop the reviews that are \"None\"."
    ]
   },
   {
@@ -253,15 +256,6 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
     "## 4.  Loading and Parsing File <a class=\"anchor\" name=\"load\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "N9esGMx8lDEc"
-   },
-   "source": [
-    "In this section, ...."
    ]
   },
   {
@@ -306,7 +300,7 @@
     "id": "-uh9oUXAlDEd"
    },
    "source": [
-    "After dropping all the review_text which is \"None\", I filtered the review by whose \"reviews\" list has more than 70 elements by applying len() method. After filtering the reviews, I created a new dataframe to store them. After that, a for loop is used to iterate through each row of the new data frame to store the review text to a new column \"review_text\". And then, join the review_text list to a string for further tokenization."
+    "After dropping all the review_text entries that are \"None,\" the reviews were filtered by applying the len() method to keep only those whose \"reviews\" list has more than 70 elements. A new DataFrame was then created to store these filtered reviews. After that, a for loop was used to iterate through each row of this new DataFrame to store the review text in a new column, \"review_text.\" The review_text list was then joined into a single string for further tokenization."
    ]
   },
   {
@@ -327,7 +321,7 @@
     "id": "gchByyjolDEf"
    },
    "source": [
-    "Tokenization is a principal step in text processing and producing unigrams. In this section, ...."
+    "Tokenization is a principal step in text processing and producing unigrams. "
    ]
   },
   {
@@ -371,9 +365,9 @@
     "1. Read the stopwords txt and append them to a list called stopwords_lis\n",
     "2. Iterate through the rows of df_reviews\n",
     "3. Task a finished: Tokenize the review_text of each row by RegexpTokenizer\n",
-    "- **Justification**: To perform further processing like remove stop words, Stemmentization etc, Words need to be tokenized first.\n",
-    "4. Task e finished: Used list comprehension to  filter out the tokens to be length longer than3\n",
-    "- **Justification**: Words's Lenth less than 3 are always meanningless words. Remove than at the beginning can help improve efficency of data processing.\n",
+    "- **Justification**: To perform further processing like remove stop words, stemmentization etc, Words need to be tokenized first.\n",
+    "4. Task e finished: Used list comprehension to  filter out the tokens longer than 3 characters\n",
+    "- **Justification**: Words with lengths less than 3 characters are always meaningless words. Removing them at the beginning can help improve efficency of data processing.\n",
     "5. Task b1 finishied: Used list comprehension to filter the unigram_tokens by word not in the stop_word list.\n",
     "- **Justification**: Stop words are considered noise that needs to be removed. Remove them before stemmatization, because if the stopwords are stemmed first, the words would be transformed that not being able to match the stopword list.\n",
     "6. Stemming the remaining tokens to their root forms using the Porter Stemmer.\n",
@@ -415,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.Identifying and removing context-dependent stopwords, which are words that appear in more than 95% of businesses.\n",
+    "1. Identifying and removing context-dependent stopwords, which are words that appear in more than 95% of businesses.\n",
     "- **Justification**: For example: \"The words \"restaurant\" and \"restaurants\" are treated separately. \"Restaurant\" might appear in 80% of reviews, and \"restaurants\" in 20%. Individually, neither might exceed a frequency threshold (like 95%). Thus, neither is removed as a context-dependent stopword."
    ]
   },
@@ -538,7 +532,7 @@
     "id": "erGhUY2UlDEg"
    },
    "source": [
-    "One of the tasks is to generate the numerical representation for all tokens in abstract.  ....."
+    "One of the tasks is to generate the numerical representation for all tokens in abstract. "
    ]
   },
   {
