--- a/notebook_templates/task5_030.ipynb
+++ b/notebook_templates/task5_030.ipynb
@@ -72,7 +72,7 @@
         "![image.png](attachment:image.png)\n",
         "\n",
         "### Date 16/08/2023\n",
-        "Today Micheal xie implemented basic regex to extract the reviews on review text, ratings, time etc.\n",
+        "Today Michael xie implemented basic regex to extract the reviews on review text, ratings, time etc.\n",
         " Group member 1:\n",
         "- Set the structure to the whole extraction process\n",
         "\n",
