--- a/notebook_templates/task2_030.ipynb
+++ b/notebook_templates/task2_030.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {
     "id": "qgmGWs8HlDEW"
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {
     "id": "bPCuEl8smTHW"
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {
     "id": "YsnRR2c4lDEc"
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {
     "id": "OPBNTTq6lDEg"
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {
     "id": "sgFFtm6qlDEg"
    },
@@ -587,7 +587,7 @@
     "    formatted_counts = [f\"{index}:{frequency}\" for index, frequency in token_counts]\n",
     "    \n",
     "    # Construct the output line with the gmap_id followed by the formatted count vector\n",
-    "    output_line = f\"{gmap_id} \" + \", \".join(formatted_counts)\n",
+    "    output_line = f\"{gmap_id},\" + \",\".join(formatted_counts)\n",
     "    \n",
     "    # Append the formatted line to the output list\n",
     "    output_countvec.append(output_line)"
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {
     "id": "Y6OUXHlxlDEm"
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {
     "id": "__n1fdIqlDEn"
    },
